--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,7 +47,7 @@ spring:
           github:
             client-id: ${GITHUB_CLIENT_ID}
             client-secret: ${GITHUB_CLIENT_SECRET}
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            redirect-uri: "${BACKEND_URL}/login/oauth2/code/github"
             scope:
               - read:user
               - user:email
@@ -62,6 +62,12 @@ spring:
 server:
   port: 8080
   forward-headers-strategy: framework
+  tomcat:
+    remoteip:
+      protocol-header: X-Forwarded-Proto
+      remote-ip-header: X-Forwarded-For
+      host-header: X-Forwarded-Host
+      port-header: X-Forwarded-Port
 
 jwt:
   secret: ${JWT_SECRET}
