fix: 깃허브 리다이렉트 URI env 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,7 +47,7 @@ spring:
           github:
             client-id: ${GITHUB_CLIENT_ID}
             client-secret: ${GITHUB_CLIENT_SECRET}
-            redirect-uri: "${BACKEND_URL}/login/oauth2/code/github"
+            redirect-uri: ${GITHUB_REDIRECT_URL}
             scope:
               - read:user
               - user:email
