--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -96,3 +96,8 @@ springdoc:
     path: /swagger-ui.html
   api-docs:
     path: /api-docs
+
+jenkins:
+  url: ${JENKINS_URL}
+  username: "be4man"
+  password: ${JENKINS_PASSWORD}
