feat: BM-12 개발을 위한 초기 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -101,3 +101,8 @@ jenkins:
   url: ${JENKINS_URL}
   username: "be4man"
   password: ${JENKINS_PASSWORD}
+
+gemini:
+  api:
+    key:
+      ${GEMINI_API_KEY}
