--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
-
+    implementation 'com.google.genai:google-genai:1.0.0'
 }
 
 tasks.named('test') {
