Feature/bm 12 deploy analysis (#20)
* feat: 최신 ERD 반영해 Entity 추가/수정

* chore: BM-17 배포 결과 수집을 위한 설정

* feat: BM-12 개발을 위한 초기 설정

* feat: BM-17 BM-14 BM-21 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -96,3 +96,13 @@ springdoc:
     path: /swagger-ui.html
   api-docs:
     path: /api-docs
+
+jenkins:
+  url: ${JENKINS_URL}
+  username: "be4man"
+  password: ${JENKINS_PASSWORD}
+
+gemini:
+  api:
+    key:
+      ${GEMINI_API_KEY}
