feat: 결재함 백엔드 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -106,3 +106,11 @@ gemini:
   api:
     key:
       ${GEMINI_API_KEY}
+
+webhooks:
+  github:
+    secret: ${BE4MAN_WEBHOOK_SECRET}
+
+github:
+  token: ${GITHUB_TOKEN}
+  apiBaseUrl: https://api.github.com
