--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: be4man-server
 
+  jackson:
+    time-zone: Asia/Seoul
+
   # .env import
   config:
     import: optional:file:.env[.properties]
@@ -21,6 +24,8 @@ spring:
         format_sql: true
         default_schema: ${DB_SCHEMA}
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          time_zone: Asia/Seoul
     open-in-view: false
 
   h2:
